--- a/app/api research.ipynb
+++ b/app/api research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "year = 2022\n",
@@ -46,30 +46,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-05-14 11:44:36,032, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице state_staff\n",
-      "2022-05-14 11:44:36,534, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=state_staff \"HTTP/1.1 200 OK\"\n",
-      "2022-05-14 11:44:36,704, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'state_staff'}\n",
-      "2022-05-14 11:44:36,712, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
-      "2022-05-14 11:44:36,712, [DEBUG], get_state_staff, Информация о преподавателях успешно передана\n",
-      "2022-05-14 11:44:36,712, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице state_staff_history\n",
-      "2022-05-14 11:44:37,001, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=state_staff_history \"HTTP/1.1 200 OK\"\n",
-      "2022-05-14 11:44:37,154, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'state_staff_history'}\n",
-      "2022-05-14 11:44:37,154, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
-      "2022-05-14 11:44:37,154, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице state_staff_positions\n",
-      "2022-05-14 11:44:37,355, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=state_staff_positions \"HTTP/1.1 200 OK\"\n",
-      "2022-05-14 11:44:37,370, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'state_staff_positions'}\n",
-      "2022-05-14 11:44:37,370, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
-      "2022-05-14 11:44:37,370, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице state_departments\n",
-      "2022-05-14 11:44:37,587, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=state_departments&filter%5Bparent_id%5D=4 \"HTTP/1.1 200 OK\"\n",
-      "2022-05-14 11:44:37,602, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'state_departments', 'filter[parent_id]': '4'}\n",
-      "2022-05-14 11:44:37,602, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
-      "2022-05-14 11:44:37,602, [DEBUG], get_departments, Информация о кафедрах успешно передана\n"
+      "2022-05-14 12:13:42,112, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице state_staff\n",
+      "2022-05-14 12:13:42,197, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=state_staff \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:42,213, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'state_staff'}\n",
+      "2022-05-14 12:13:42,213, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
+      "2022-05-14 12:13:42,213, [DEBUG], get_state_staff, Информация о преподавателях успешно передана\n",
+      "2022-05-14 12:13:42,213, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице state_staff_history\n",
+      "2022-05-14 12:13:42,275, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=state_staff_history \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:42,291, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'state_staff_history'}\n",
+      "2022-05-14 12:13:42,291, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
+      "2022-05-14 12:13:42,297, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице state_staff_positions\n",
+      "2022-05-14 12:13:42,360, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=state_staff_positions \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:42,360, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'state_staff_positions'}\n",
+      "2022-05-14 12:13:42,360, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
+      "2022-05-14 12:13:42,360, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице state_departments\n",
+      "2022-05-14 12:13:42,429, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=state_departments&filter%5Bparent_id%5D=4 \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:42,429, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'state_departments', 'filter[parent_id]': '4'}\n",
+      "2022-05-14 12:13:42,429, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
+      "2022-05-14 12:13:42,445, [DEBUG], get_departments, Информация о кафедрах успешно передана\n"
      ]
     }
    ],
@@ -87,6 +87,129 @@
     "    ),\n",
     "    departments=await get_departments(),\n",
     ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-05-14 12:13:47,074, [DEBUG], department_staff, Передана информация о составе подразделения: department_id: 12, за период year: 2022, month_start: 5, month_end: 5\n",
+      "2022-05-14 12:13:47,074, [DEBUG], get_lessons, Переданы параметры для запроса 'get_lessons': date between '2022-05-01' and '2022-05-31'\n",
+      "2022-05-14 12:13:47,175, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=schedule_day_schedule_lessons&filter=date+between+%272022-05-01%27+and+%272022-05-31%27 \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:47,444, [DEBUG], wrapper, get_lessons. Запрос успешно выполнен: {'table': 'schedule_day_schedule_lessons', 'filter': \"date between '2022-05-01' and '2022-05-31'\"}\n",
+      "2022-05-14 12:13:47,444, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
+      "2022-05-14 12:13:47,444, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице schedule_day_schedule_lessons_staff\n",
+      "2022-05-14 12:13:47,595, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=schedule_day_schedule_lessons_staff \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:47,773, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'schedule_day_schedule_lessons_staff'}\n",
+      "2022-05-14 12:13:47,789, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
+      "2022-05-14 12:13:47,789, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице load_groups\n",
+      "2022-05-14 12:13:47,858, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=load_groups \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:47,858, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'load_groups'}\n",
+      "2022-05-14 12:13:47,874, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
+      "2022-05-14 12:13:47,874, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице load_subgroups\n",
+      "2022-05-14 12:13:47,927, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=load_subgroups \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:47,927, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'load_subgroups'}\n",
+      "2022-05-14 12:13:47,943, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
+      "2022-05-14 12:13:47,943, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице plan_education_plans\n",
+      "2022-05-14 12:13:48,012, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=plan_education_plans \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:48,027, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'plan_education_plans'}\n",
+      "2022-05-14 12:13:48,027, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n",
+      "2022-05-14 12:13:48,027, [DEBUG], api_get_db_table, Переданы параметры для запроса 'api_get_db_table': к таблице plan_education_plans_education_forms\n",
+      "2022-05-14 12:13:48,074, [DEBUG], _send_single_request, HTTP Request: GET https://apeks.orui-mvd.ru/api/call/system-database/get?token=41695bc4-e880-4281-8a68-da88ea5e4696&table=plan_education_plans_education_forms \"HTTP/1.1 200 OK\"\n",
+      "2022-05-14 12:13:48,090, [DEBUG], wrapper, api_get_db_table. Запрос успешно выполнен: {'table': 'plan_education_plans_education_forms'}\n",
+      "2022-05-14 12:13:48,090, [DEBUG], check_api_db_response, Проверка 'response' выполнена успешно. Возвращен список по ключу: 'data'\n"
+     ]
+    }
+   ],
+   "source": [
+    "load = LoadReportProcessor(\n",
+    "    year=year,\n",
+    "    month_start=month_start,\n",
+    "    month_end=month_end,\n",
+    "    department_id=department_id,\n",
+    "    departments=staff.departments,\n",
+    "    department_staff=staff.department_staff(department_id),\n",
+    "    schedule_lessons=await check_api_db_response(\n",
+    "        await get_lessons(year, month_start, month_end)\n",
+    "        ),\n",
+    "    schedule_lessons_staff=await check_api_db_response(\n",
+    "        await api_get_db_table(Apeks.TABLES.get(\"schedule_day_schedule_lessons_staff\"))\n",
+    "    ),\n",
+    "    load_groups=await check_api_db_response(\n",
+    "        await api_get_db_table(Apeks.TABLES.get(\"load_groups\"))\n",
+    "    ),\n",
+    "    load_subgroups=await check_api_db_response(\n",
+    "                await api_get_db_table(Apeks.TABLES.get(\"load_subgroups\"))\n",
+    "            ),\n",
+    "    plan_education_plans=await check_api_db_response(\n",
+    "        await api_get_db_table(Apeks.TABLES.get(\"plan_education_plans\"))\n",
+    "    ),\n",
+    "    plan_education_plans_education_forms=await check_api_db_response(\n",
+    "        await api_get_db_table(\n",
+    "            Apeks.TABLES.get(\"plan_education_plans_education_forms\")\n",
+    "        )\n",
+    "    ),\n",
+    "    staff_history_data=staff.staff_history(),\n",
+    ")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{30: {'lecture': {'och': 0,\n   'zo_high': 6,\n   'zo_mid': 2,\n   'adj': 4,\n   'prof_p': 0,\n   'dpo': 0},\n  'seminar': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'pract': {'och': 4,\n   'zo_high': 42,\n   'zo_mid': 8,\n   'adj': 12,\n   'prof_p': 22,\n   'dpo': 8},\n  'group_cons': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'zachet': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'exam': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'final_att': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0}},\n 32: {'lecture': {'och': 8,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 2,\n   'dpo': 2},\n  'seminar': {'och': 16,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 4},\n  'pract': {'och': 36,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 18},\n  'group_cons': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'zachet': {'och': 14.25,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'exam': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'final_att': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0}},\n 33: {'lecture': {'och': 4,\n   'zo_high': 2,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'seminar': {'och': 4,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'pract': {'och': 28,\n   'zo_high': 52,\n   'zo_mid': 8,\n   'adj': 0,\n   'prof_p': 28,\n   'dpo': 0},\n  'group_cons': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'zachet': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'exam': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'final_att': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0}},\n 54: {'lecture': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 16,\n   'dpo': 0},\n  'seminar': {'och': 4,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'pract': {'och': 46,\n   'zo_high': 10,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 48,\n   'dpo': 0},\n  'group_cons': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'zachet': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 4,\n   'dpo': 0},\n  'exam': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0},\n  'final_att': {'och': 0,\n   'zo_high': 0,\n   'zo_mid': 0,\n   'adj': 0,\n   'prof_p': 0,\n   'dpo': 0}}}"
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load.load_data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "6\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for l in load.control_lessons:\n",
+    "    if l.get('department_id') == '12' and l.get('staff_id') == 32:\n",
+    "        pprint(l.get('hours'))"
    ],
    "metadata": {
     "collapsed": false,
