Payment Calculator database added

--- a/mm_development.ipynb
+++ b/mm_development.ipynb
@@ -2,10 +2,411 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'status': 1, 'data': [{'journal_lesson_id': '44768', 'staff_id': '287'}]}"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from app.common.func.api_get import check_api_db_response, api_get_db_table\n",
+    "from app.common.func.api_post import api_edit_db_table\n",
+    "from config import ApeksConfig as Apeks\n",
+    "\n",
+    "filters = {\n",
+    "    # \"staff_id\": '181',\n",
+    "    \"journal_lesson_id\": '44768'\n",
+    "}\n",
+    "\n",
+    "data = await api_get_db_table('student_journal_lessons_staff', **filters)\n",
+    "data"
+   ],
    "metadata": {
-    "collapsed": true
-   },
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-21T16:57:33.005693Z",
+     "end_time": "2023-04-21T16:57:33.065894Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "schedule_day_schedule_lessons_staff {'status': 1, 'data': []}\n",
+      "student_journal_lessons_staff {'status': 1, 'data': [{'journal_lesson_id': '2830', 'staff_id': '264'}, {'journal_lesson_id': '2832', 'staff_id': '264'}]}\n",
+      "student_marks_staff {'status': 1, 'data': []}\n",
+      "schedule_replacement_staff {'status': 1, 'data': []}\n",
+      "schedule_replacement_staff {'status': 1, 'data': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "filters = {\n",
+    "    \"staff_id\": '264',\n",
+    "    # \"journal_lesson_id\": '4142'\n",
+    "}\n",
+    "\n",
+    "for table in [\n",
+    "    'schedule_day_schedule_lessons_staff',\n",
+    "    'student_journal_lessons_staff',\n",
+    "    'student_marks_staff'\n",
+    "]:\n",
+    "    data = await api_get_db_table(table, **filters)\n",
+    "    print(table, data)\n",
+    "\n",
+    "\n",
+    "old_staff_id = await api_get_db_table('schedule_replacement_staff', old_staff_id=filters[\"staff_id\"])\n",
+    "print('schedule_replacement_staff', old_staff_id)\n",
+    "new_staff_id = await api_get_db_table('schedule_replacement_staff', new_staff_id=filters[\"staff_id\"])\n",
+    "print('schedule_replacement_staff', new_staff_id)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-21T17:03:33.017488Z",
+     "end_time": "2023-04-21T17:03:33.347461Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "for lesson in data.get('data'):\n",
+    "    print(lesson['journal_lesson_id'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-13T09:02:31.067430Z",
+     "end_time": "2023-04-13T09:02:31.081228Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "student_marks_staff {'status': 1, 'data': [{'journal_lesson_id': '4142', 'staff_id': '272'}]}\n",
+      "4142\n"
+     ]
+    }
+   ],
+   "source": [
+    "OLD_STAFF = '272'\n",
+    "NEW_STAFF = '119'\n",
+    "TABLE = \"student_journal_lessons_staff\"\n",
+    "\n",
+    "filters = {\n",
+    "    \"staff_id\": OLD_STAFF,\n",
+    "    # \"lesson_id\": '44768'\n",
+    "}\n",
+    "\n",
+    "data = await api_get_db_table(TABLE, **filters)\n",
+    "print(table, data)\n",
+    "\n",
+    "for lesson in data.get('data'):\n",
+    "    print(lesson['journal_lesson_id'])\n",
+    "\n",
+    "    filters = {\n",
+    "        \"journal_lesson_id\": lesson['journal_lesson_id'],\n",
+    "    }\n",
+    "    fields = {\n",
+    "        \"staff_id\": NEW_STAFF,\n",
+    "    }\n",
+    "\n",
+    "    # print(filters, fields)\n",
+    "    await api_edit_db_table(TABLE, filters, fields)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-21T16:58:45.016652Z",
+     "end_time": "2023-04-21T16:58:45.110415Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "schedule_replacement_staff {'status': 1, 'data': [{'id': '993', 'lesson_id': '30631', 'old_staff_id': '111', 'new_staff_id': '210', 'status': '2', 'user_id': '92', 'cause_id': None}, {'id': '994', 'lesson_id': '45808', 'old_staff_id': '111', 'new_staff_id': '210', 'status': '2', 'user_id': '92', 'cause_id': None}, {'id': '995', 'lesson_id': '45712', 'old_staff_id': '111', 'new_staff_id': '210', 'status': '2', 'user_id': '92', 'cause_id': None}, {'id': '996', 'lesson_id': '45751', 'old_staff_id': '111', 'new_staff_id': '210', 'status': '2', 'user_id': '92', 'cause_id': None}, {'id': '997', 'lesson_id': '45825', 'old_staff_id': '111', 'new_staff_id': '210', 'status': '2', 'user_id': '92', 'cause_id': None}, {'id': '998', 'lesson_id': '45824', 'old_staff_id': '111', 'new_staff_id': '210', 'status': '2', 'user_id': '92', 'cause_id': None}, {'id': '999', 'lesson_id': '45855', 'old_staff_id': '111', 'new_staff_id': '210', 'status': '2', 'user_id': '92', 'cause_id': None}]}\n",
+      "45808\n",
+      "45712\n",
+      "45751\n",
+      "45825\n",
+      "45824\n",
+      "45855\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = await api_get_db_table('schedule_replacement_staff', new_staff_id='210')\n",
+    "print('schedule_replacement_staff', new_staff_id)\n",
+    "\n",
+    "for record in data.get('data'):\n",
+    "    print(record['lesson_id'])\n",
+    "\n",
+    "    filters = {\n",
+    "        \"lesson_id\": record['lesson_id'],\n",
+    "    }\n",
+    "    fields = {\n",
+    "        \"new_staff_id\": '113',\n",
+    "    }\n",
+    "\n",
+    "    # print(filters, fields)\n",
+    "    await api_edit_db_table('schedule_replacement_staff', filters, fields)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-13T10:50:18.299246Z",
+     "end_time": "2023-04-13T10:50:18.627459Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'status': 1, 'data': 1}"
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filters = {\n",
+    "    \"lesson_id\": '30631',\n",
+    "}\n",
+    "fields = {\n",
+    "    \"new_staff_id\": '113',\n",
+    "}\n",
+    "\n",
+    "# print(filters, fields)\n",
+    "await api_edit_db_table('schedule_replacement_staff', filters, fields)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-04-13T10:49:36.155891Z",
+     "end_time": "2023-04-13T10:49:36.234019Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [],
+   "source": [
+    "from collections import OrderedDict\n",
+    "from phpserialize import loads, dumps\n",
+    "import codecs\n",
+    "\n",
+    "from config import ApeksConfig as Apeks\n",
+    "from app.common.func.api_get import check_api_db_response, api_get_db_table\n",
+    "\n",
+    "async def get_organization_chief_info(\n",
+    "    table: str = Apeks.TABLES.get(\"system_settings\"),\n",
+    ") -> dict:\n",
+    "    \"\"\"\n",
+    "    Получение данных о руководителе образовательной организации.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "        table: str\n",
+    "            таблица БД, содержащая системные сведения о ВУЗе.\n",
+    "\n",
+    "    Returns\n",
+    "    ----------\n",
+    "        dict\n",
+    "            {'name': 'Фамилия Имя Отчество',\n",
+    "             'position': 'должность',\n",
+    "             'specialRank': 'id',\n",
+    "             'name_short': 'И.О. Фамилия'}\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = await check_api_db_response(\n",
+    "        await api_get_db_table(table, setting=\"system.head.chief\")\n",
+    "    )\n",
+    "    value = list(response)[0].get(\"value\")\n",
+    "\n",
+    "    return value\n",
+    "\n",
+    "    if value:\n",
+    "        chief_data = json.loads(value)\n",
+    "        name = chief_data.get(\"name\").split()\n",
+    "        if len(name) >= 3:\n",
+    "            chief_data[\"name_short\"] = f\"{name[1][0]}.{name[2][0]}. {name[0]}\"\n",
+    "        return chief_data"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "outputs": [],
+   "source": [
+    "value = await get_organization_chief_info()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'{\"name\":\"\\\\u041f\\\\u0440\\\\u043e\\\\u043a\\\\u0430\\\\u0437\\\\u0438\\\\u043d \\\\u0414\\\\u043c\\\\u0438\\\\u0442\\\\u0440\\\\u0438\\\\u0439 \\\\u041b\\\\u0435\\\\u043e\\\\u043d\\\\u0438\\\\u0434\\\\u043e\\\\u0432\\\\u0438\\\\u0447\",\"position\":\"\\\\u041d\\\\u0430\\\\u0447\\\\u0430\\\\u043b\\\\u044c\\\\u043d\\\\u0438\\\\u043a \\\\u0438\\\\u043d\\\\u0441\\\\u0442\\\\u0438\\\\u0442\\\\u0443\\\\u0442\\\\u0430\",\"specialRank\":\"14\"}'"
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "value"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'name': 'Проказин Дмитрий Леонидович',\n 'position': 'Начальник института',\n 'specialRank': '14'}"
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "json.loads(value)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'{\"name\":\"\\\\u041f\\\\u0440\\\\u043e\\\\u043a\\\\u0430\\\\u0437\\\\u0438\\\\u043d \\\\u0414\\\\u043c\\\\u0438\\\\u0442\\\\u0440\\\\u0438\\\\u0439 \\\\u041b\\\\u0435\\\\u043e\\\\u043d\\\\u0438\\\\u0434\\\\u043e\\\\u0432\\\\u0438\\\\u0447\",\"position\":\"\\\\u041d\\\\u0430\\\\u0447\\\\u0430\\\\u043b\\\\u044c\\\\u043d\\\\u0438\\\\u043a \\\\u0438\\\\u043d\\\\u0441\\\\u0442\\\\u0438\\\\u0442\\\\u0443\\\\u0442\\\\u0430\",\"specialRank\":\"14\"}'"
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "codecs.decode(value.encode())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "value = {\"name\":\"\\u041f\\u0440\\u043e\\u043a\\u0430\\u0437\\u0438\\u043d \\u0414\\u043c\\u0438\\u0442\\u0440\\u0438\\u0439 \\u041b\\u0435\\u043e\\u043d\\u0438\\u0434\\u043e\\u0432\\u0438\\u0447\",\"position\":\"\\u041d\\u0430\\u0447\\u0430\\u043b\\u044c\\u043d\\u0438\\u043a \\u0438\\u043d\\u0441\\u0442\\u0438\\u0442\\u0443\\u0442\\u0430\",\"specialRank\":\"14\"}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [],
+   "source": [
+    "value = b'\\\\u041f\\\\u0440\\\\u043e\\\\u043a\\\\u0430\\\\u0437\\\\u0438\\\\u043d \\\\u0414\\\\u043c\\\\u0438\\\\u0442\\\\u0440\\\\u0438\\\\u0439 \\\\u041b\\\\u0435\\\\u043e\\\\u043d\\\\u0438\\\\u0434\\\\u043e\\\\u0432\\\\u0438\\\\u0447'"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "outputs": [
+    {
+     "ename": "LookupError",
+     "evalue": "unknown encoding: unicode",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mLookupError\u001B[0m                               Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[49], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mcodecs\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdecode\u001B[49m\u001B[43m(\u001B[49m\u001B[43mvalue\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43municode\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[1;31mLookupError\u001B[0m: unknown encoding: unicode"
+     ]
+    }
+   ],
+   "source": [
+    "codecs.decode(value, 'unicode')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{b'name': b'\\xd0\\x9f\\xd1\\x80\\xd0\\xbe\\xd0\\xba\\xd0\\xb0\\xd0\\xb7\\xd0\\xb8\\xd0\\xbd \\xd0\\x94\\xd0\\xbc\\xd0\\xb8\\xd1\\x82\\xd1\\x80\\xd0\\xb8\\xd0\\xb9 \\xd0\\x9b\\xd0\\xb5\\xd0\\xbe\\xd0\\xbd\\xd0\\xb8\\xd0\\xb4\\xd0\\xbe\\xd0\\xb2\\xd0\\xb8\\xd1\\x87',\n b'position': b'\\xd0\\x9d\\xd0\\xb0\\xd1\\x87\\xd0\\xb0\\xd0\\xbb\\xd1\\x8c\\xd0\\xbd\\xd0\\xb8\\xd0\\xba \\xd0\\xb8\\xd0\\xbd\\xd1\\x81\\xd1\\x82\\xd0\\xb8\\xd1\\x82\\xd1\\x83\\xd1\\x82\\xd0\\xb0',\n b'specialRank': b'14'}"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loads(value)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "from app.common.classes.EducationPlan import EducationPlan\n",
@@ -31,7 +432,10 @@
     "    plan_education_plans=plan_education_plans,\n",
     "    plan_curriculum_disciplines=plan_disciplines,\n",
     ")"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
