staff_app: stable staff report added

--- a/app/staff/staff.ipynb
+++ b/app/staff/staff.ipynb
@@ -519,6 +519,66 @@
    },
    "id": "fedff561e0090cbc",
    "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "from sqlalchemy.orm import sessionmaker\n",
+    "from config import FlaskConfig, MongoDBSettings\n",
+    "from sqlalchemy import create_engine\n",
+    "from app.db.staff_models import StaffStableBusyTypes\n",
+    "from app.services.base_db_service import BaseDBService\n",
+    "import datetime as dt\n",
+    "from app.common.func.organization import get_departments\n",
+    "from app.db.mongodb import get_mongo_db\n",
+    "\n",
+    "\n",
+    "engine = create_engine(FlaskConfig.SQLALCHEMY_DATABASE_URI, echo=True)\n",
+    "Session = sessionmaker(bind=engine)\n",
+    "session = Session()\n",
+    "\n",
+    "working_date = dt.date.today()\n",
+    "departments = await get_departments()\n",
+    "mongo_db = get_mongo_db()\n",
+    "staff_db = mongo_db[MongoDBSettings.STAFF_STABLE_COLLECTION]\n",
+    "staff_stable_service = BaseDBService(StaffStableBusyTypes, db_session=session)\n",
+    "current_data = staff_db.find_one({\"date\": '2321-12-34'})"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-27T12:16:11.043490Z",
+     "start_time": "2023-12-27T12:16:10.926528Z"
+    }
+   },
+   "id": "716a297bef8a67c6",
+   "execution_count": 14
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{9: {'full': 'административного права и административной деятельности ОВД',\n  'short': 'АП и АД ОВД',\n  'type': 'Кафедры'},\n 10: {'full': 'гражданско-правовых  дисциплин',\n  'short': 'ГрПД',\n  'type': 'Кафедры'},\n 11: {'full': 'государственно-правовых дисциплин',\n  'short': 'ГПД',\n  'type': 'Кафедры'},\n 12: {'full': 'информационных технологий в деятельности ОВД',\n  'short': 'ИТ в ДОВД',\n  'type': 'Кафедры'},\n 13: {'full': 'криминалистики и предварительного расследования в ОВД',\n  'short': 'К и ПР в ОВД',\n  'type': 'Кафедры'},\n 14: {'full': 'оперативно-разыскной деятельности ОВД',\n  'short': 'ОРД ОВД',\n  'type': 'Кафедры'},\n 15: {'full': 'организации деятельности ГИБДД',\n  'short': 'ОД ГИБДД',\n  'type': 'Кафедры'},\n 16: {'full': 'социально-гуманитарных дисциплин',\n  'short': 'СГД',\n  'type': 'Кафедры'},\n 17: {'full': 'огневой подготовки и деятельности ОВД в особых условиях',\n  'short': 'ОП и ДОВД в ОУ',\n  'type': 'Кафедры'},\n 18: {'full': 'уголовного права и криминологии ',\n  'short': 'УП и К',\n  'type': 'Кафедры'},\n 19: {'full': 'уголовного процесса', 'short': 'УП', 'type': 'Кафедры'},\n 20: {'full': 'физической подготовки и спорта',\n  'short': 'ФП и С',\n  'type': 'Кафедры'},\n 21: {'full': 'специальной подготовки', 'short': 'СП', 'type': 'Кафедры'},\n 22: {'full': 'иностранных и русского языков',\n  'short': 'И и РЯ',\n  'type': 'Кафедры'}}"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "departments\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-27T12:16:00.794379Z",
+     "start_time": "2023-12-27T12:16:00.791593Z"
+    }
+   },
+   "id": "efe90f42b2bd1901",
+   "execution_count": 13
   }
  ],
  "metadata": {
